<resources>
    <string name="app_name">SpoilerAlert</string>
    <string name="homeText_item">Home</string>
    <string name="editSpoilerText_item">Edit Spoiler Alert</string>
    <string name="shareText_item">Share</string>
    <string name="shareText_placeHolder">Share With Me</string>
    <string name="spoilersText_item">Spoilers</string>
    <string name="category_name_spoiler">Enter Spoiler Alert Name</string>
    <string name="spoiler_words">Enter, Spoiler, Words</string>
    <string name="enter_time">Enter Time Length Here</string>
    <string name="add_contacts_here">Add People to Share With</string>
    <string name="submit_spoiler_alert">Submit Spoiler Alert</string>
    <string name="resubmit_spoiler_alert">Re-Submit Spoiler Alert</string>
    <string name="cancel_spoiler_alert">Cancel</string>
    <string name="cancel_edit">Cancel Edits</string>
    <string name="set_time_text">Set Time</string>
    <string name="set_date_text">Set Date</string>
    <string name="editText"><u>Edit</u></string>
    <string name="eraseText"><u>Erase</u></string>
    <string name="shareText"><u>Share</u></string>
    <string name="spoiler_alert_name"><u>Spoiler Alert Name</u></string>
    <string name="confirm_spoiler_alert">Confirm</string>
    <string name="name_of_spoiler"><u>Name of Spoiler</u></string>
    <string name="name_of_spoilerAlert">Name of SpoilerAlert</string>
    <string name="shared_with">Shared With</string>
    <string name="share_with_others">Share With Others</string>
    <string name="time_and_date">Time and Date</string>
    <string name="sign_out">Sign Out</string>
    <string name="scan_text">Scan</string>
    <string name="scan_buttonText">Scan</string>
    <string name="potential_spoilers">Potential Spoilers</string>
    <string name="list_of_potential_spoilers">List of Potential Spoilers</string>

</resources>
