<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="@string/editSpoilerText_item"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/nameOfSpoilerAlert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/category_name_spoiler"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/triggerWords"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/spoiler_words"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:maxLines="4"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/shareWithContacts"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/add_contacts_here"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorAccent"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setTime"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="58dp"
            android:background="@color/colorAccent"
            android:text="@string/set_time_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setDate"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/set_date_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/resubmitSpoilerAlertButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_submitbutton"
        android:text="@string/resubmit_spoiler_alert"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/cancelSpoilerAlertButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_sign_out_button"
        android:text="@string/cancel_edit"
        android:textColor="@color/colorAccent" />




</LinearLayout>