<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/homeText_item"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/nameOfSpoilerAlert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/category_name_spoiler"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/triggerWords"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/trigger_words"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/timeLength"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_time"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/shareWithContacts"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_contacts_here"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitSpoilerAlertButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/submit_spoiler_alert"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_submitbutton"/>


</LinearLayout>