<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:id="@+id/confirmSpoilerAlertTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Confirm Spoiler Alert"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/nameOfSpoilerAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/name_of_spoilerAlert"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/SpoilerAlertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:text="Spoiler Alert Name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/potentialSpoilers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/list_of_potential_spoilers"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ListofSpoilerAlerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="Potential Spoilers" />

    <TextView
        android:id="@+id/PeopleSharedWithPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:text="@string/shared_with"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PeopleSharedWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="People Shared With"
        />

    <TextView
        android:id="@+id/timeAndDate_PlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/time_and_date"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/TimeAndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="Alert Ends On: Time and Date"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ConfirmSpoilerAlertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_submitbutton"
            android:text="@string/confirm_spoiler_alert"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/CancelSpoilerAlertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_cancelbutton"
            android:text="Cancel"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>