<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
            android:id="@+id/nameOfSpoilerAlert_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spoilerTextView"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/name_of_spoiler"/>

    <TextView
        android:id="@+id/add_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="124dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/addText" />

    <TextView
        android:id="@+id/delete_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="72dp"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/eraseText" />

    <TextView
        android:id="@+id/share_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/shareText" />

            <TextView
                android:id="@+id/spoilerAlertName_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameOfSpoilerAlert_textview"
                android:layout_weight="1"
                android:textSize="13sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:text="Spoiler Alert Name" />

            <TextView
                android:id="@+id/filterWords_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spoilerAlertName_textview"
                android:textSize="10sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_weight="1"
                tools:text="Words, words, words, words" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/nameOfSpoilerAlert_textview"
        android:layout_marginEnd="31dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/contacts_icon" />
    </LinearLayout>


</RelativeLayout>
